# dynamic_scope

./: CMakeLists.txt  README.md  dynscope.cpp  text.h
